Add linkedin profile badge

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 border-radius: 100px;
             }
         </style>
+        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     </head>
     <body>
         <div class="holder">
@@ -83,6 +84,9 @@
                         <i class="fab fa-linkedin-in icon"></i>
                     </a>
                 </div>
+            </div>
+            <div class="center-xs">
+                <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="garretcharp"><a class="LI-simple-link" href='https://www.linkedin.com/in/garretcharp?trk=profile-badge'>Garret Harp</a></div>
             </div>
         </div>
     </body>
