--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                 border: 5px solid black;
                 border-radius: 100px;
             }
+            
+            #linkedin-badge{
+                margin: 10px;
+                padding: 10px;
+            }
         </style>
         <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     </head>
@@ -85,7 +90,7 @@
                     </a>
                 </div>
             </div>
-            <div class="center-xs">
+            <div id="linkedin-badge" class="center-xs">
                 <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="garretcharp"><a class="LI-simple-link" href='https://www.linkedin.com/in/garretcharp?trk=profile-badge'>Garret Harp</a></div>
             </div>
         </div>
