remove the center class to linkedin badge

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 text-decoration: inherit;
             }
             .icons {
-                margin-top: 50px;
+                margin-top: 5%;
             }
             
             .icon {
@@ -50,8 +50,10 @@
             }
             
             #linkedin-badge{
-                margin: 10px;
-                padding: 10px;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 5%;
             }
         </style>
         <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
@@ -90,7 +92,7 @@
                     </a>
                 </div>
             </div>
-            <div id="linkedin-badge" class="center-xs">
+            <div id="linkedin-badge">
                 <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="garretcharp"><a class="LI-simple-link" href='https://www.linkedin.com/in/garretcharp?trk=profile-badge'>Garret Harp</a></div>
             </div>
         </div>
