--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             }
             .img {
                 border: 5px solid black;
-                border-radius: 100px;
+                border-radius: 50%;
             }
             
             #linkedin-badge{
